--- a/app/app/templates/home.html
+++ b/app/app/templates/home.html
@@ -73,7 +73,7 @@
                                 <p class="card-text">Com esta ferramenta Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut, maiores! Id at debitis earum incidunt harum architecto ea! Inventore molestiae repellat quam quaerat eligendi vel, quod voluptatibus officiis quisquam eaque.</p>                            
                             </div>
                             <div class="d-flex justify-content-end p-3">
-                                <a href="{{ url_for('pfc_input') }}" class="p-2 btn btn-primary bg-dark">Utilizar ferramenta</a>
+                                <a href="{{ url_for('pfc') }}" class="p-2 btn btn-primary bg-dark">Utilizar ferramenta</a>
                             </div>
                         </div>
                     </div>
