--- a/app/app/templates/admittance_matrix.html
+++ b/app/app/templates/admittance_matrix.html
@@ -2,14 +2,32 @@
 {% block content %}     
     <div class="row mb-3 mx-4 p-0">
         <div class="container col-md-8 border border-dark rounded py-3 ps-3">
+            <button class="btn btn-dark my-1 w-50 d-flex justify-content-between" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1" aria-expanded="false" aria-controls="collapse1">
+                Acessar Teoria
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-question-circle" viewBox="0 0 16 16">
+                    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+                    <path d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286zm1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94z"/>
+                </svg>
+            </button>
+            <div class="collapse" id="collapse1">
+                <div class="card card-body">
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/hk7E4H5Q_Xc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    </div>
+                    <p> Caso o vídeo não solucione suas dúvidas, acesse a playlist sobre o tema do professor Luís César</p>
+                    <div class="d-flex justify-content-end p-1">
+                        <a href="https://www.youtube.com/playlist?list=PLotZYHQBkGgS_hR4DWNmlyNa51oeoTjs-" class="p-2 btn btn-primary bg-dark" target="_blank">Ir para Playlist</a>
+                    </div>
+                </div>
+            </div>
             <div class="container p-0">
-                <button class="btn btn-dark my-1 w-50 d-flex justify-content-between" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1" aria-expanded="false" aria-controls="collapse1">
+                <button class="btn btn-dark my-1 w-50 d-flex justify-content-between" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2" aria-expanded="false" aria-controls="collapse2">
                     Adicionar Impedância Série
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-plus-circle-fill ms-2" viewBox="0 0 16 16">
                         <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3v-3z"/>
                     </svg>
                 </button>
-                <div class="collapse" id="collapse1">
+                <div class="collapse" id="collapse2">
                     <div class="card card-body">
                         <form method="POST" action="" class="px-3">
                             {{ pu_zs_form.hidden_tag() }}
@@ -54,16 +72,14 @@
                     </div>
                 </div>
             </div>
-
-
             <div class="container p-0">
-                <button class="btn btn-dark my-1 w-50 d-flex justify-content-between" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2" aria-expanded="false" aria-controls="collapse2">
+                <button class="btn btn-dark my-1 w-50 d-flex justify-content-between" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3" aria-expanded="false" aria-controls="collapse3">
                     Adicionar Impedância Shunt
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-plus-circle-fill ms-2" viewBox="0 0 16 16">
                         <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3v-3z"/>
                     </svg>
                 </button>
-                <div class="collapse" id="collapse2">
+                <div class="collapse" id="collapse3">
                     <div class="card card-body">
                         <form method="POST" action="" class="px-3">
                             {{ pu_zsh_form.hidden_tag() }}
@@ -101,16 +117,14 @@
                     </div>
                 </div>
             </div>
-
-
             <div class="container p-0">
-                <button class="btn btn-dark my-1 w-50 d-flex justify-content-between" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3" aria-expanded="false" aria-controls="collapse3">
+                <button class="btn btn-dark my-1 w-50 d-flex justify-content-between" type="button" data-bs-toggle="collapse" data-bs-target="#collapse4" aria-expanded="false" aria-controls="collapse4">
                     Adicionar Admitância Série
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-plus-circle-fill ms-2" viewBox="0 0 16 16">
                         <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3v-3z"/>
                     </svg>
                 </button>
-                <div class="collapse" id="collapse3">
+                <div class="collapse" id="collapse4">
                     <div class="card card-body">
                         <form method="POST" action="" class="px-3">
                             {{ pu_as_form.hidden_tag() }}
@@ -155,16 +169,14 @@
                     </div>
                 </div>
             </div>
-
-
             <div class="container p-0">
-                <button class="btn btn-dark my-1 w-50 d-flex justify-content-between" type="button" data-bs-toggle="collapse" data-bs-target="#collapse4" aria-expanded="false" aria-controls="collapse4">
+                <button class="btn btn-dark my-1 w-50 d-flex justify-content-between" type="button" data-bs-toggle="collapse" data-bs-target="#collapse5" aria-expanded="false" aria-controls="collapse5">
                     Adicionar Admitância Shunt
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-plus-circle-fill ms-2" viewBox="0 0 16 16">
                         <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3v-3z"/>
                     </svg>
                 </button>
-                <div class="collapse" id="collapse4">
+                <div class="collapse" id="collapse5">
                     <div class="card card-body">
                         <form method="POST" action="" class="px-3">
                             {{ pu_ash_form.hidden_tag() }}
@@ -202,7 +214,6 @@
                     </div>
                 </div>
             </div>
-            
             <div class="container p-0">
                 <button class="btn btn-dark my-1 w-50 d-flex justify-content-between" type="button" data-bs-toggle="collapse" data-bs-target="#collapse6" aria-expanded="false" aria-controls="collapse6">
                     Adicionar Problema
@@ -211,8 +222,8 @@
                     </svg>
                 </button>
                 <div class="collapse" id="collapse6">
-                    <div class="card card-body">
-                        <form method="POST" action="" enctype="multipart/form-data" class="px-3">
+                    <div class="card card-body px-3">
+                        <form method="POST" action="" enctype="multipart/form-data">
                             {{ file_form.hidden_tag() }}
                             <fieldset>
                                 <div class="form-group">
@@ -231,6 +242,7 @@
                                 {{ file_form.submit_file(class="btn btn-secondary mb-3 mt-1 w-100 disabled") }}
                             {% endif %}
                         </form>
+                        <a class="btn btn-secondary" href="{{ url_for('download_file') }}" role="button">Baixe modelo de planilha aqui!</a>
                     </div>
                 </div>
             </div>
