--- a/app/app/templates/home.html
+++ b/app/app/templates/home.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
     <div class="row p-0 mt-0 mb-4 mx-4">
-        <div class="col-md-8">
+        <div class="col-md-8 mx-auto">
             <div class="col">
                 <div class="card mb-3">
                     <div class="row g-0">
@@ -52,10 +52,10 @@
                         <div class="d-flex flex-column col-md-8">
                             <div class="card-body">
                                 <h5 class="card-title">Redução de Nós</h5>
-                                <p class="card-text">Com esta ferramenta você poderá eliminar qualquer barra de uma dada matriz, uma por vez. Entretanto essa ferramenta só é acessível pelo resultado da ferramenta Matriz de Admitância Nodal.</p>                            
+                                <p class="card-text">Com esta ferramenta você poderá eliminar qualquer barra de uma dada matriz, uma por vez. Entretanto essa ferramenta só é acessível pelo resultado da ferramenta Matriz de Admitância Nodal. Caso queira acessar a teoria a respeito do tema clique no botão do card.</p>                            
                             </div>
                             <div class="d-flex justify-content-end p-3">
-                                <a href=# class="p-2 btn btn-primary bg-dark disabled">Utilizar ferramenta</a>
+                                <a href="{{ url_for('matrix_reduction') }}" class="p-2 btn btn-primary bg-dark">Acessar teoria</a>
                             </div>
                         </div>
                     </div>
@@ -88,10 +88,10 @@
                         <div class="d-flex flex-column col-md-8">
                             <div class="card-body">
                                 <h5 class="card-title">Análise de Curto-circuito</h5>
-                                <p class="card-text">Com esta ferramenta Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut, maiores! Id at debitis earum incidunt harum architecto ea! Inventore molestiae repellat quam quaerat eligendi vel, quod voluptatibus officiis quisquam eaque.</p>                            
+                                <p class="card-text">Ferramenta em desenvolvimento, caso deseje ter acesso a teoria que a fundamentará essa ferramenta clique no botão do card.</p>                            
                             </div>
                             <div class="d-flex justify-content-end p-3">
-                                <a href=# class="p-2 btn btn-primary bg-dark">Utilizar ferramenta</a>
+                                <a href="{{ url_for('short_circuit') }}" class="p-2 btn btn-primary bg-dark">Acessar Teoria</a>
                             </div>
                         </div>
                     </div>
@@ -106,17 +106,19 @@
                         <div class="d-flex flex-column col-md-8">
                             <div class="card-body">
                                 <h5 class="card-title">Análise básica de instabilidade</h5>
-                                <p class="card-text">Com esta ferramenta Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut, maiores! Id at debitis earum incidunt harum architecto ea! Inventore molestiae repellat quam quaerat eligendi vel, quod voluptatibus officiis quisquam eaque.</p>                            
+                                <p class="card-text">Ferramenta em desenvolvimento, caso deseje ter acesso a teoria que a fundamentará essa ferramenta clique no botão do card.</p>                            
                             </div>
                             <div class="d-flex justify-content-end p-3">
-                                <a href=# class="p-2 btn btn-primary bg-dark">Utilizar ferramenta</a>
+                                <a href="{{ url_for('stability_analysis') }}" class="p-2 btn btn-primary bg-dark">Acessar Teoria</a>
                             </div>
                         </div>
                     </div>
                 </div>            
             </div>
         </div>
-        <div class="col-md-4">
+
+
+        <!-- <div class="col-md-4">
             <div class="content-section p-3 m-0">
                 <h3>Barra lateral:</h3>
                 <ul class="list-group">
@@ -124,7 +126,8 @@
                 </ul>
                 </p>
             </div>
-        </div>
+        </div> -->
+
     </div>
 
 {% endblock content %}
