--- a/app/app/templates/matrix_reduction.html
+++ b/app/app/templates/matrix_reduction.html
@@ -4,37 +4,55 @@
         <div class="container col-md-8 border border-dark rounded py-3 ps-3">
             <div class="container p-0">
                 <button class="btn btn-dark my-1 w-50 d-flex justify-content-between" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1" aria-expanded="false" aria-controls="collapse1">
-                    Eliminar Barra
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-plus-circle-fill ms-2" viewBox="0 0 16 16">
-                        <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3v-3z"/>
+                    Acessar Teoria
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-question-circle" viewBox="0 0 16 16">
+                        <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+                        <path d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286zm1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94z"/>
                     </svg>
                 </button>
                 <div class="collapse" id="collapse1">
                     <div class="card card-body">
-                        <form method="POST" action="" class="px-3">
-                            {{ del_bar_form.hidden_tag() }}
-                            <fieldset>
-                                
-                                <div class="container input-group p-0">
-                                    <span class="input-group-text w-25">Barra</span>
-                                    {% if del_bar_form.bar.errors %}
-                                        {{ del_bar_form.bar(class="form-control w-75 is-invalid") }}
-                                        <div class="invalid-feedback text-center">
-                                            {% for error in del_bar_form.bar.errors %}
-                                                <span>{{ error }}</span>
-                                            {% endfor %}
-                                        </div>
-                                    {% else %}
-                                        {{ del_bar_form.bar(class="form-control w-75") }}
-                                    {% endif %}
-                                </div>
-                                
-                            </fieldset> 
-                            {{ del_bar_form.submit_bar(class="btn btn-secondary mb-3 w-100") }}
-                        </form>
+                        <div class="embed-responsive embed-responsive-16by9">
+                            <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/lubQoJqJt24" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        </div>
                     </div>
                 </div>
             </div>
+            {% if not is_request_referrer_home %}
+                <div class="container p-0">
+                    <button class="btn btn-dark my-1 w-50 d-flex justify-content-between" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2" aria-expanded="false" aria-controls="collapse2">
+                        Eliminar Barra
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-plus-circle-fill ms-2" viewBox="0 0 16 16">
+                            <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3v-3z"/>
+                        </svg>
+                    </button>
+                    <div class="collapse" id="collapse2">
+                        <div class="card card-body">
+                            <form method="POST" action="" class="px-3">
+                                {{ del_bar_form.hidden_tag() }}
+                                <fieldset>
+                                    
+                                    <div class="container input-group p-0">
+                                        <span class="input-group-text w-25">Barra</span>
+                                        {% if del_bar_form.bar.errors %}
+                                            {{ del_bar_form.bar(class="form-control w-75 is-invalid") }}
+                                            <div class="invalid-feedback text-center">
+                                                {% for error in del_bar_form.bar.errors %}
+                                                    <span>{{ error }}</span>
+                                                {% endfor %}
+                                            </div>
+                                        {% else %}
+                                            {{ del_bar_form.bar(class="form-control w-75") }}
+                                        {% endif %}
+                                    </div>
+                                    
+                                </fieldset> 
+                                {{ del_bar_form.submit_bar(class="btn btn-secondary mb-3 w-100") }}
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            {% endif %}
         </div>
     </div>
 {% endblock content %}
